# pureprivacy-mobile

./: .gitignore  Cargo.toml  README.md
apps/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/ai/tournesol/pureprivacy/: AppViewModel.kt  ElementCallActivity.kt  IncomingCallActivity.kt  MainActivity.kt  PpApp.kt  PpSyncService.kt  SecureWindow.kt
apps/android/app/src/main/java/ai/tournesol/pureprivacy/audio/: AudioPlayer.kt  VoiceRecorder.kt
apps/android/app/src/main/java/ai/tournesol/pureprivacy/backup/: BackupSyncManager.kt  BackupSyncStore.kt  BackupSyncWorker.kt
apps/android/app/src/main/java/ai/tournesol/pureprivacy/matrix/: ConsentRepository.kt  MatrixRepo.kt
apps/android/app/src/main/java/ai/tournesol/pureprivacy/net/: TorNet.kt
apps/android/app/src/main/java/ai/tournesol/pureprivacy/security/: PasscodeStore.kt
apps/android/app/src/main/java/ai/tournesol/pureprivacy/tor/: TorManager.kt
apps/android/app/src/main/res/drawable/: ic_sunflower.xml
apps/android/app/src/main/res/raw/: pp_proxy.p12
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/main/res/xml/: network_security_config.xml
apps/ios/: README.md
core_ffi/: Cargo.toml
core_ffi/src/: lib.rs
demo/: README.md  boxes-dashboard.sh  demo-drive.sh
docs/: element-call-over-onion-requirements.md
docs/play-store/: DATA-SAFETY.md  PRIVACY-POLICY.md  README.md  REVIEWER-NOTES.md
(+4 files in other folders)
